--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 	              <img class="bg-image" src="/media/img/main__site_2.jpg">
 	              <div class="caption center-align" style="margin-top:90px;text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);">
 		            <h3 style="color:#8CE2B4;">Contact Us</h3>
-		            <h5 class="light grey-text text-lighten-3">0@18bra.net</h5>
-		          </div>
+		            <h5 class="light grey-text text-lighten-3">drop@three-body.club</h5>
+		            </div>
 	            </li>
 	          </ul>
 	        </div>
