--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	             <img class="bg-image" id="slide-image-1">
 	             <div class="caption center-align" style="margin-top:90px;text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);">
 		          <h3 style="color:#8CE2B4;">We are young<span style="color:#fff;">O_o</span></h3>
-		          <h5 class="light grey-text text-lighten-3">We can crossing wall</h5>
+		          <h5 class="light grey-text text-lighten-3">We can across the great wall</h5>
 		        </div>
 	            </li>
 	            <li>
@@ -114,7 +114,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-43718849-1', 'softvar.github.io');
+  ga('create', 'UA-43718849-1', 'eighteenindex.github.io');
   ga('send', 'pageview');
 
 </script>
