--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	            <li>
 	             <img class="bg-image" id="slide-image-1">
 	             <div class="caption center-align" style="margin-top:90px;text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);">
-		          <h3 style="color:#8CE2B4;">We are young<span style="color:#fff;">O_o</span></h3>
+		          <h3 style="color:#8CE2B4;">We are young</h3>
 		          <h5 class="light grey-text text-lighten-3">We can across the great wall</h5>
 		        </div>
 	            </li>
